# Gems

./: CMakeLists.txt  README.md  План.txt
Gems/: Gems.sln  Задание.docx  План.txt
Gems/Gems/: Bomb.cpp  Bonus.cpp  Bonus.h  Bonuses.cpp  Bonuses.h  Controls.cpp  Field.cpp  Field.h  FieldMain.cpp  FieldRefilling.cpp  Font.cpp  Font.h  GameLoop.cpp  GameLoop.h  GameLoopModules.cpp  GameLoopStart.cpp  Gem.cpp  Gem.h  Gems.vcxproj  Gems.vcxproj.filters  Help.cpp  Main.cpp  Main.h  MatchingDeletion.cpp  Menu.cpp  Menu.h  MenuStart.cpp  Painter.cpp  Painter.h  Setup.cpp  Textures.cpp  Textures.h
Gems/Gems/Debug/: vc142.idb
Gems/Gems/Debug/Gems.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Gems.lastbuildstate
Gems/Gems/x64/Debug/: vc142.idb
Gems/Gems/x64/Debug/Gems.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Gems.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Gems/Gems/x64/Release/Gems.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Gems.lastbuildstate  Gems.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Gems/x64/Release/: Gems.iobj  Gems.ipdb
include/: Bomb.h  Bonus.h  Field.h  Gem.h  Textures.h
src/: FieldMain.cpp  FieldRefilling.cpp  GameLoopModules.cpp  GameLoopStart.cpp  Main.cpp  MatchingDeletion.cpp  Menu.cpp  MenuStart.cpp  Painter.cpp  Textures.cpp
